--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^19.2.1",
     "react-scripts": "^5.0.1",
     "rxjs": "^7.8.2",
+    "stockfish": "^17.1.0",
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
